# jitsem-web

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Readme.md  deploy.sh  docker-compose.yml  make.sh  styles.css
assets/: base.js
src/: main.rs
templates/: about.html  playground.html  projects.html
templates/components/: base.html  footer.html  head.html  navbar.html
